Add meanpool & st submissions (excl. QQP), add full-finetune notebook

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -161,8 +161,8 @@
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"mnli_mismatched\"\n",
-    "embedding_param = [\"cls_single\"]"
+    "task_param = \"rte\"\n",
+    "embedding_param = [\"sentence_single\"]"
    ]
   },
   {
@@ -239,27 +239,131 @@
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e00fea7f43ed44c1aa429b7f2bab7703",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbf89beba37b4f80a41b05f68ffd5d99",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/584k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec97f5b5e70b4516baf0f42ee04dce95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/69.0k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80d7fb94acf74582b817227241af31ed",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/621k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4dbd6cfaec664d36ab39cf4a350a1487",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ea0058ee35c8482a92e1836dde478498",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating train split:   0%|          | 0/2490 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19a0a972cceb420d9eff101ebd29e89c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating validation split:   0%|          | 0/277 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce8da9aadc5741308b62f01afcb2285c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/3000 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "DatasetDict({\n",
        "    train: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 392702\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 2490\n",
        "    })\n",
-       "    validation_matched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9815\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 277\n",
        "    })\n",
-       "    validation_mismatched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9832\n",
-       "    })\n",
-       "    test_matched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9796\n",
-       "    })\n",
-       "    test_mismatched: Dataset({\n",
-       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
-       "        num_rows: 9847\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
+       "        num_rows: 3000\n",
        "    })\n",
        "})"
       ]
@@ -302,17 +406,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0, 1, 2])]\n",
-      "(392702, 3)\n",
-      "(9832, 3)\n",
-      "(9847, 3)\n"
+      "(2490,)\n",
+      "(277,)\n",
+      "(3000,)\n"
      ]
     }
    ],
@@ -349,18 +452,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['cls_single']\n",
-      "cls_single embeddings found!\n",
-      "X_train shape: (392702, 1536)\n",
-      "X_val shape  : (9832, 1536)\n",
-      "X_test shape : (9847, 1536)\n"
+      "['sentence_single']\n",
+      "sentence_single embeddings found!\n",
+      "X_train shape: (1536,)\n",
+      "X_val shape  : (1536,)\n",
+      "X_test shape : (1536,)\n"
      ]
     }
    ],
@@ -641,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,16 +766,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train shape: (392702, 1536)\n",
-      "X_val shape  : (9832, 1536)\n",
-      "X_test shape : (9847, 1536)\n"
+     "ename": "AxisError",
+     "evalue": "axis 1 is out of bounds for array of dimension 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m X_train \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m X_val \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(X_val, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m X_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(X_test, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
      ]
     }
    ],
@@ -766,9 +872,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(392702, 768)\n",
-      "(9832, 768)\n",
-      "(9847, 768)\n"
+      "(2490, 768)\n",
+      "(277, 768)\n",
+      "(3000, 768)\n"
      ]
     }
    ],
@@ -819,21 +925,18 @@
     "input_size = X_train_computed.shape[1]\n",
     "\n",
     "param_grid = {\n",
-    "    'num_epochs': [6],\n",
     "    'max_epochs': [50],\n",
     "    'batch_size': [32],\n",
     "    'learning_rate': [0.001],\n",
     "    'category': ['MC'],\n",
     "    'norm': [False],\n",
     "    'input_size': [768],\n",
-    "    'layer_size': [384],\n",
+    "    'layer_size': [768],\n",
     "    'num_classes': [3],\n",
-    "    'num_layers': [10],\n",
+    "    'num_layers': [1],\n",
     "    'weight_decay': [0.0001],\n",
     "    'patience': [3],\n",
     "    'min_delta': [0],\n",
-    "    'verbose': [True],\n",
-    "    'device': ['mps']\n",
     "}\n",
     "\n",
     "# default overrides\n",
@@ -854,13 +957,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving results to ./results/cls_single/mnli_mismatched/val_20240110_000927_DistilRoBERTa.csv\n"
+      "saving results to ./results/sentence_single/rte/val_20240110_133650_DistilRoBERTa.csv\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3e4232c402843788e41b3c0cff47977",
+       "model_id": "ee8bb2f6967247d7af24da696f28860a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -872,14 +975,15 @@
      "output_type": "display_data"
     },
     {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'num_epochs'",
+     "ename": "RuntimeError",
+     "evalue": "shape '[32, 3]' is invalid for input of size 32",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 45\u001b[0m\n\u001b[1;32m     42\u001b[0m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mmanual_seed_all(seed)\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# Initialize the model with current set of hyperparameters\u001b[39;00m\n\u001b[0;32m---> 45\u001b[0m feed_forward \u001b[38;5;241m=\u001b[39m \u001b[43mFeedForward\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     47\u001b[0m metrics, train_times_per_epoch, energy_per_epoch \u001b[38;5;241m=\u001b[39m feed_forward\u001b[38;5;241m.\u001b[39mfit(X_train_computed,\n\u001b[1;32m     48\u001b[0m                                                                     Y_train,\n\u001b[1;32m     49\u001b[0m                                                                     X_val_computed,\n\u001b[1;32m     50\u001b[0m                                                                     Y_val)\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Log average training time per epoch for current parameter set\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# Note: FFN frequently stops early\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'num_epochs'"
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[18], line 47\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;66;03m# Initialize the model with current set of hyperparameters\u001b[39;00m\n\u001b[1;32m     45\u001b[0m feed_forward \u001b[38;5;241m=\u001b[39m FeedForward(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n\u001b[0;32m---> 47\u001b[0m metrics, train_times_per_epoch, energy_per_epoch \u001b[38;5;241m=\u001b[39m \u001b[43mfeed_forward\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_computed\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     48\u001b[0m \u001b[43m                                                                    \u001b[49m\u001b[43mY_train\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     49\u001b[0m \u001b[43m                                                                    \u001b[49m\u001b[43mX_val_computed\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     50\u001b[0m \u001b[43m                                                                    \u001b[49m\u001b[43mY_val\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     52\u001b[0m \u001b[38;5;66;03m# Log average training time per epoch for current parameter set\u001b[39;00m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;66;03m# Note: FFN frequently stops early\u001b[39;00m\n\u001b[1;32m     54\u001b[0m training_time \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmean(train_times_per_epoch)\n",
+      "File \u001b[0;32m~/Documents/TECH/research/projectx/fast/fast/utils/feed_forward.py:238\u001b[0m, in \u001b[0;36mFeedForward.fit\u001b[0;34m(self, X, y, X_val, y_val)\u001b[0m\n\u001b[1;32m    236\u001b[0m inputs, targets \u001b[38;5;241m=\u001b[39m data\n\u001b[1;32m    237\u001b[0m inputs, targets \u001b[38;5;241m=\u001b[39m inputs\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdevice), targets\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdevice)\n\u001b[0;32m--> 238\u001b[0m targets \u001b[38;5;241m=\u001b[39m \u001b[43mtargets\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtargets\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_classes\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    240\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m    242\u001b[0m outputs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel(inputs)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shape '[32, 3]' is invalid for input of size 32"
      ]
     }
    ],
@@ -1146,15 +1250,6 @@
    "source": [
     "results_df = pd.read_csv(test_results_file)\n",
     "results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feed_forward._validate(X_test_computed, Y_test, return_predictions=True)"
    ]
   }
  ],
