--- a/fast/hyperparam.ipynb
+++ b/fast/hyperparam.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "036b2c55-d063-4094-a481-dc1466d81e1e",
    "metadata": {},
    "outputs": [
@@ -110,9 +110,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "embedding: cls_single\n",
-      "task: mnli_mismatched\n",
-      "accuracy: 0.676159479251424\n",
+      "embedding: meanpool_single\n",
+      "task: rte\n",
+      "accuracy: 0.5956678700361011\n",
       "\n"
      ]
     },
@@ -121,31 +121,31 @@
       "text/plain": [
        "{'num_epochs': [6],\n",
        " 'max_epochs': [50],\n",
-       " 'batch_size': [32],\n",
-       " 'learning_rate': [0.001],\n",
-       " 'category': ['MC'],\n",
+       " 'batch_size': [512],\n",
+       " 'learning_rate': [0.01],\n",
+       " 'category': ['BC'],\n",
        " 'norm': [False],\n",
        " 'input_size': [768],\n",
-       " 'layer_size': [384],\n",
-       " 'num_classes': [3],\n",
-       " 'num_layers': [10],\n",
-       " 'weight_decay': [0.0001],\n",
-       " 'patience': [3],\n",
+       " 'layer_size': [768],\n",
+       " 'num_classes': [1],\n",
+       " 'num_layers': [1],\n",
+       " 'weight_decay': [0.01],\n",
+       " 'patience': [5],\n",
        " 'min_delta': [0],\n",
-       " 'verbose': [True],\n",
-       " 'device': ['mps']}"
+       " 'device': ['cuda'],\n",
+       " 'verbose': [True]}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "embedding = \"cls_single\"\n",
-    "task = \"mnli_mismatched\"\n",
+    "embedding = \"meanpool_single\"\n",
+    "task = \"rte\"\n",
     "filepath = \"./results/\" # base directory for results .csv files\n",
-    "dates = [\"20240105\", \"20240106\", \"20240107\", \"20240108\", \"20240109\", \"20240110\"] # get results from specific dates\n",
+    "dates = [\"20240110\"] # get results from specific dates\n",
     "\n",
     "extract_hyperparameters_from_dir(filepath, embedding, task, dates=dates)"
    ]
