Refactor extract_hyperparam into python file in utils

--- a/fast/predict.ipynb
+++ b/fast/predict.ipynb
@@ -23,34 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"rte\"\n",
+    "task_param = \"mrpc\"\n",
     "embedding_param = [\"sentence_single\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# best hyperparameter combination\n",
-    "param_grid = {'max_epochs': [50],\n",
-    "'batch_size': [32],\n",
-    "'learning_rate': [0.01],\n",
-    "'category': ['BC'],\n",
-    "'norm': [False],\n",
-    "'input_size': [768],\n",
-    "'layer_size': [768],\n",
-    "'num_classes': [1],\n",
-    "'num_layers': [1],\n",
-    "'weight_decay': [0.01],\n",
-    "'patience': [3],\n",
-    "'min_delta': [0]}"
+    "import utils.extract_hyperparam\n",
+    "filepath = \"./results/\" # base directory for results .csv files\n",
+    "dates = [] # get results from specific dates\n",
+    "\n",
+    "param_grid = utils.extract_hyperparam.extract_all_from_dir(filepath, embedding_param[0], task_param, dates=dates)\n",
+    "param_grid = utils.extract_hyperparam.set_early_stop_epochs(param_grid)\n",
+    "param_grid"
    ]
   },
   {
@@ -62,12 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "import time\n",
     "import csv\n",
     "import os\n",
     "import pathlib\n",
@@ -80,13 +73,9 @@
     "import pandas as pd\n",
     "\n",
     "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
     "from datasets import load_dataset\n",
     "\n",
-    "from utils.feed_forward import FeedForward\n",
-    "from utils.cls import extract_cls_embeddings\n",
-    "from utils.mean_pooling import mean_pooling\n",
-    "from utils.energy import get_energy"
+    "from utils.feed_forward import FeedForward"
    ]
   },
   {
@@ -98,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,17 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -195,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,33 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 2490\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 277\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 3000\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -286,19 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2490,)\n",
-      "(277,)\n",
-      "(3000,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
@@ -332,21 +279,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sentence_single']\n",
-      "sentence_single embeddings found!\n",
-      "X_train shape: (1536,)\n",
-      "X_val shape  : (1536,)\n",
-      "X_test shape : (1536,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_length = len(embedding_param)\n",
     "print(embedding_param)\n",
@@ -379,49 +314,14 @@
     "        if \"cls\" in embedding_param[id] or \"meanpool\" in embedding_param[id]:\n",
     "            create_dataloader = True\n",
     "        elif \"sentence\" in embedding_param[id]:\n",
-    "            create_sentence = True\n",
-    "\n"
+    "            create_sentence = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.00805687, -0.00389214,  0.00954744, ...,  0.04677139,\n",
-       "        -0.00044084,  0.03534073], dtype=float32)]"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AxisError",
-     "evalue": "axis 1 is out of bounds for array of dimension 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[163], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m X_train \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m X_val \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(X_val, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m X_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate(X_test, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train = np.concatenate(X_train, axis=1)\n",
     "X_val = np.concatenate(X_val, axis=1)\n",
@@ -440,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,19 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(635, 768)\n",
-      "(71, 768)\n",
-      "(146, 768)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "######################\n",
     "# Choose ids of (Ux, Vx) to alter embeddings\n",
@@ -543,17 +433,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(706, 768) (706,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train_combined = np.concatenate((X_train_computed, X_val_computed), axis=0)\n",
     "Y_train_combined = np.concatenate((Y_train, Y_val), axis=0)\n",
@@ -576,17 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_grid['input_size'] = [X_train_computed.shape[1]]\n",
     "\n",
@@ -602,38 +476,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./results/sentence_single/wnli/test_20240110_132610_DistilRoBERTa.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b4443007f3f493cae6ac0c79699acfc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving predictions to ./results/sentence_single/wnli/y_pred_20240110_132610_DistilRoBERTa.tsv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_pred = None\n",
     "\n",
@@ -728,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -778,12 +623,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0.252772</td>\n",
+       "      <td>0.674203</td>\n",
+       "      <td>0.674203</td>\n",
+       "      <td>1.130909</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.170272</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.770419</td>\n",
+       "      <td>84.818191</td>\n",
        "      <td>0.0</td>\n",
        "      <td>50</td>\n",
        "      <td>32</td>\n",
@@ -793,7 +638,7 @@
        "      <td>768</td>\n",
        "      <td>768</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>0.01</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
@@ -806,14 +651,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   mcc   f1  accuracy  training time / epoch  embedding time  \\\n",
-       "0  0.0  0.0       0.0               0.170272             0.0   \n",
+       "        mcc        f1  accuracy  training time / epoch  embedding time  \\\n",
+       "0  0.252772  0.674203  0.674203               1.130909             0.0   \n",
        "\n",
        "   training energy / epoch  embedding energy  max_epochs  batch_size  \\\n",
-       "0                12.770419               0.0          50          32   \n",
+       "0                84.818191               0.0          50          32   \n",
        "\n",
        "   learning_rate  ...   norm  input_size  layer_size  num_classes  num_layers  \\\n",
-       "0           0.01  ...  False         768         768            1           1   \n",
+       "0           0.01  ...  False         768         768            1           3   \n",
        "\n",
        "   weight_decay  patience  min_delta  verbose  device  \n",
        "0          0.01         3          0     True     mps  \n",
@@ -821,7 +666,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,175 +674,6 @@
    "source": [
     "results_df = pd.read_csv(test_results_file)\n",
     "results_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'loss': 0.7827132940292358,\n",
-       " 'accuracy': 0.0,\n",
-       " 'f1': 0.0,\n",
-       " 'mcc': 0.0,\n",
-       " 'predictions': tensor([[0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [0]])}"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "feed_forward._validate(X_test_computed, Y_test, return_predictions=True)"
    ]
   },
   {
@@ -1016,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,24 +705,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y_pred_df['prediction'] = y_pred_df['prediction'].replace({0: 'entailment', 1: 'not_entailment'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y_pred_df.to_csv(test_y_pred_file, sep='\\t', index=False, header=True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1055,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,13 +724,6 @@
     "df['prediction'] = df['prediction'].replace({0: 'entailment', 1: 'neutral', 2: 'contradiction'})\n",
     "df.to_csv(new_filepath, sep='\\t', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
